8190515: java.awt.Desktop.moveToTrash(File) prompts on Windows 7 but not on Mac

Reviewed-by: serb, prr